# swagger.json
@@ -7,8 +7,12 @@
   },
   "servers": [
     {
+      "url": "http://localhost:8080"
+    },
+    {
       "url": "http://192.168.1.18:8080"
     }
+    
   ],
   "security": [],
   "paths": {
@@ -785,6 +789,121 @@
           "400": { "description": "Bad request" },
           "401": { "description": "Unauthorized" },
           "500": { "description": "Internal Server Error" }
+        }
+      }
+    },
+        "/user/register": {
+      "post": {
+        "summary": "create user",
+        "tags": [
+          "USER"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "default": "poorvi"
+                  },
+                
+                  "email": {
+                    "type": "string",
+                    "default": "poorvi@mailinator.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "default": "123456"
+                  },
+                 
+                  "device": {
+                    "type": "string",
+                    "default": "ios"
+                  },
+                  "device_id": {
+                    "type": "string",
+                    "default": "23224rryty"
+                  },
+                  "fcm_token": {
+                    "type": "string",
+                    "default": "qweewewqe"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Request successfully"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+        "/user/login": {
+      "post": {
+        "summary": "login user",
+        "tags": [
+          "USER"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "default": "poorvi@mailinator.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "default": "123456"
+                  },
+                  "device": {
+                    "type": "string",
+                    "default": "ios"
+                  },
+                  "device_id": {
+                    "type": "string",
+                    "default": "23224rryty"
+                  },
+                  "fcm_token": {
+                    "type": "string",
+                    "default": "qweewewqe"
+                  }
+                },
+                "required": [
+                  "email",
+                  "password"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Request successfully"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       }
     }
